fixed the gist layout bug

--- a/v2ex_reply.css
+++ b/v2ex_reply.css
@@ -242,3 +242,7 @@ span[class^="inputBTN"]:hover
 {
     cursor: pointer;
 }
+
+.gist{
+    white-space: normal !important;
+}
